--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.2",
+    "axios": "^0.18.0",
+    "less-loader": "^4.1.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-router": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
