--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
     "react-loadable": "^5.5.0",
+    "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
