--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
+    "bmap": "^1.0.1",
+    "braft-editor": "^2.2.9",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
@@ -59,6 +61,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
+    "viser-react": "^2.4.5",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
