新增代码高亮、markdown部分

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.10.2",
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "antd": "^3.15.2",
@@ -52,9 +53,13 @@
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^4.0.8",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-syntax-highlighter": "^10.2.1",
+    "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
+    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
