--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "antd": "^3.15.2",
+    "antd-table-infinity": "^1.1.2",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -49,9 +50,11 @@
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.5",
+    "react-amap": "^1.2.8",
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.5",
+    "react-google-maps": "^9.4.5",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.8",
     "react-redux": "^6.0.1",
@@ -60,6 +63,7 @@
     "react-syntax-highlighter": "^10.2.1",
     "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
     "react-virtualized": "^9.21.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
