--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^5.16.0",
+    "eslint": "^5.5.0",
+    "eslint-config-ali": "^6.0.0",
     "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -84,11 +86,8 @@
     "lint": "eslint --ext .js src"
   },
   "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "indent": ["warn", 2],
-      "semi": ["warn", "always", { "omitLastInOneLineBlock": true }]
-    }
+    "parser": "babel-eslint",
+    "extends": "eslint-config-ali/react"
   },
   "browserslist": [
     ">0.2%",
